# neo-agent-core

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: content-context-thread.ipynb
examples/agentic/: neo.ipynb  tools.ipynb
examples/mcp/: client.py
examples/mcp/mcp-server-demo/: main.py
examples/models/: anthropic.ipynb  google.ipynb  mistral.ipynb  openai.ipynb  xai.ipynb
examples/use_cases/: code_gen.ipynb  data_extraction.ipynb
src/neo/agentic/: __init__.py  docs.md  instruction.py  model_registry.py  neo.py  task.py  tool_registry.py
src/neo/contexts/: __init__.py  context.py  thread.py
src/neo/mcp/: client.py
src/neo/models/providers/: anthropic.py  base.py  google.py  local.py  mistral.py  openai.py  xai.py
src/neo/tools/: __init__.py  code_gen.py  tool.py
src/neo/tools/image_gen/: openai.py
src/neo/tools/internal_tools/: anthropic.py  base.py  openai.py  xai.py
src/neo/tools/speech/openai/: __init__.py  speech2text.py  text2speech.py
src/neo/types/: contents.py  errors.py  modalities.py  roles.py  tool_codes.py
src/neo/utils/: common.py  file_handling.py  ids.py  logger.py  search.py  singleton.py
tests/: test_agentic.py  test_code_execution_tool.py  test_contents.py  test_contexts.py  test_mcp_client.py  test_model_registry.py  test_models.py  test_tools.py
