[project]
name = "neo"
dynamic = ["version"]
authors = [
    {name = "Haoming Li", email = "haoming_li@outlook.com"}
]
requires-python = ">=3.10, <3.12"
dependencies = [
    "ipykernel>=6.29.2",
    "matplotlib>=3.8.2",
    "nbclient>=0.9.0",
    "nbconvert>=7.13.1",
    "nbformat>=5.9.2",
    "notebook>=7.0.7",
    "numpy",
    "openai==1.76.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "pypdf",
    "pydantic>=2.10.6",
    "pydub",
    "anthropic==0.46.0",
    "google-genai==1.3.0",
    "mcp==1.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo"]

[tool.hatch.version]
path = "src/neo/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
